--- a/scripts/templates/readme.ejs
+++ b/scripts/templates/readme.ejs
@@ -46,9 +46,9 @@ This is the home of the Ampgular ClI and the schematics packages for seo and amp
 
 ### Quick Links Angular
 <% for (const link of Object.keys(monorepo.linksAngular)) {
-  %>[<%= link %>](<%= monorepo.links[link] %>) | <%
+  %>[<%= link %>](<%= monorepo.linksAngular[link] %>) | <%
 } %>
-<% for (const link of Object.keys(monorepo.links)) {
+<% for (const link of Object.keys(monorepo.linksAngular)) {
 %>|---<%
 } %>|
 
@@ -118,6 +118,7 @@ if (mrPkg.snapshotRepo) {
 %><%= section ? '#### ' + section : '' %>
 
 | Project | Package | Version | Links |
+|---|---|---|---|
 <%
 for (const pkgName of Object.keys(packages)) {
   const pkg = packages[pkgName];
